# Team4_Project

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml
src/sensors/: readSensors.py  sensorFakes.py
src/weather_api/: __init__.py  airQualityIndex.py  forecast.py  precipitation.py  sunStatus.py  wind.py
tests/: test__init__.py  test_airQualityIndex.py  test_precipitation.py  test_readSensors.py  test_sensorFakes.py  test_wind.py
